--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 <body>
   <main class="h-100" id="router-view">
   </main>
+
+  <div class="d-none">
+    <img id="preloader" onload="app.ImageController.drawImage()" src="" alt="">
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.auth0.com/js/auth0-spa-js/1.22/auth0-spa-js.production.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/jakeoverall/auth0provider-client/browser/Auth0Provider.js"></script>
